deployment/k8s/member/member.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: member
    app: houseofcommons
  name: member
spec:
  selector:
    matchLabels:
      component: member
      app: houseofcommons
  replicas: 1
  template:
    metadata:
      labels:
        component: member
        app: houseofcommons
    spec:
      containers:
        - name: member
          image: eu.gcr.io/cloud-native-deployment/member
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    component: member
    app: houseofcommons
  name: member
spec:
  type: NodePort
  ports:
    - name: member-http
      port: 8080
      targetPort: 8080
  selector:
    component: member
    app: houseofcommons
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: member-ingress
  labels:
    app: member
    component: houseofcommons
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /member(/|$)(.*)
            backend:
              serviceName: member
              servicePort: member-http
